--- a/PiedraPapel/main.html
+++ b/PiedraPapel/main.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/style.css'>
     <script src='main.js'></script>
 </head>
 
