--- a/Principal/Principal.html
+++ b/Principal/Principal.html
@@ -6,8 +6,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
     <script src='js/main.js'></script>
 </head>
 
@@ -31,9 +31,9 @@
         </ul>
 
         <div class="botonera">
-            <button class="boton"> PIEDRA PAPEL O TIJERA, LAGARTO, SPOCK</button>
-            <button class="boton">BUSCA MINAS</button>
-            <button class="boton">SIMON DICE</button>
+            <button class="boton" onclick="location.href='../PiedraPapel/main.html'"> PIEDRA PAPEL O TIJERA, LAGARTO, SPOCK</button><br>
+            <button class="boton">BUSCA MINAS</button><br>
+            <button class="boton">SIMON DICE</button><br>
             <button class="boton">HISTORIA</button>
         </div>
 
