--- a/SimonDice/simondice.html
+++ b/SimonDice/simondice.html
@@ -101,6 +101,9 @@
             <li></li>
             <li></li>
         </ul>
+
+        <img src="../SourceComp/flechaAtras.png" alt="">
+
         <div class="titulo">
             <h1>SIMON DICE</h1>
         </div>
