--- a/PiedraPapel/main.html
+++ b/PiedraPapel/main.html
@@ -28,6 +28,8 @@
             <li></li>
         </ul>
 
+        <img class="atras" src="../SourceComp/flechaAtras.png" onclick="location.href='../Principal/Principal.html'">
+
         <h1 class="hola">BIENVENIDO</h1>
 
         <P class="jugada" id="jugada">Selecciona tu jugada: </P>
