--- a/Principal/Principal.html
+++ b/Principal/Principal.html
@@ -8,7 +8,6 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../css/style.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
-    <script src='js/main.js'></script>
 </head>
 
 <body>
@@ -29,12 +28,18 @@
             <li></li>
             <li></li>
         </ul>
-
+        
         <div class="botonera">
             <button class="boton" onclick="location.href='../PiedraPapel/main.html'"> PIEDRA PAPEL O TIJERA, LAGARTO, SPOCK</button><br>
-            <button class="boton">BUSCA MINAS</button><br>
-            <button class="boton">SIMON DICE</button><br>
-            <button class="boton">HISTORIA</button>
+            <button class="boton" onclick="location.href='../Buscaminas/main 1.html'">BUSCA MINAS</button><br>
+            <button class="boton" onclick="location.href='../SimonDice/simondice.html'">SIMON DICE</button><br>
+            <button class="boton">HISTORIA</button><br>
+            <select id="selectorIdiomas">
+                <option value="es">🇨🇳</option>
+                <option value="en"></option>
+                <option value="chi"></option>
+                <option value=""></option>
+            </select>
         </div>
 
     </div>
