--- a/SimonDice/simondice.html
+++ b/SimonDice/simondice.html
@@ -7,7 +7,7 @@
     <title>Simon Dice</title>
     <script src="main.js"></script>
     <script src="casos.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="boton.css">
 
     <style>
@@ -74,10 +74,12 @@
         }
 
         .titulo {
-            color: rgb(34, 1, 65);
+            position: relative;
+            color: #2b2469;
             font-family: sans-serif;
             font-size: xx-large;
-            background-color: rgba(255, 255, 255, 0.082);
+            background-color: #ffffff21;
+            flex-direction: row;
         }
     </style>
 
@@ -102,8 +104,7 @@
             <li></li>
         </ul>
 
-        <img src="../SourceComp/flechaAtras.png" alt="">
-
+        <img class="atras" src="../SourceComp/flechaAtras.png" onclick="location.href='../Principal/Principal.html'">
         <div class="titulo">
             <h1>SIMON DICE</h1>
         </div>
