empezando con traducciones

--- a/Principal/Principal.html
+++ b/Principal/Principal.html
@@ -13,7 +13,7 @@
 <body>
     <div class="area">
         <div class="hola">
-            <h1>JUEGUITOS</h1>
+            <h1 id="titulo">JUEGUITOS</h1>
         </div>
 
         <ul class="circles">
@@ -34,12 +34,13 @@
             <button class="boton" onclick="location.href='../Buscaminas/main 1.html'">BUSCA MINAS</button><br>
             <button class="boton" onclick="location.href='../SimonDice/simondice.html'">SIMON DICE</button><br>
             <button class="boton">HISTORIA</button><br>
-            <select id="selectorIdiomas">
-                <option value="es">🇨🇳</option>
-                <option value="en"></option>
-                <option value="chi"></option>
-                <option value=""></option>
+            <select id="selector_idioma">
+                <option id="selecEs" value="es">Español</option>
+                <option id="selecEn" value="en">Inglés</option>
             </select>
+
+            <script src="../js/main.js"></script>
+            
         </div>
 
     </div>
