--- a/PiedraPapel/main.html
+++ b/PiedraPapel/main.html
@@ -30,7 +30,7 @@
 
         <img class="atras" src="../SourceComp/flechaAtras.png" onclick="location.href='../Principal/Principal.html'">
 
-        <h1 class="hola">PIEDRA, PAPEL, TIJERA, LAGARTO Y SPOCK</h1>
+        <h1 class="hola" id="tituloPiedraPapel">PIEDRA, PAPEL, TIJERA, LAGARTO Y SPOCK</h1>
 
         <P class="jugada" id="jugada">Selecciona tu jugada: </P>
         <div class="botonera">
@@ -57,6 +57,7 @@
             <p id="seleccionIA"></p>
         </div>
 
+        <script src="../js/main.js"></script>
 
     </div>
 </body>
