--- a/Principal/Principal.html
+++ b/Principal/Principal.html
@@ -30,7 +30,7 @@
         </ul>
         
         <div class="botonera">
-            <button class="boton" onclick="location.href='../PiedraPapel/main.html'"> PIEDRA PAPEL O TIJERA, LAGARTO, SPOCK</button><br>
+            <button id="tituloPiedraPapel" class="boton" onclick="location.href='../PiedraPapel/main.html'"> PIEDRA PAPEL O TIJERA, LAGARTO, SPOCK</button><br>
             <button class="boton" onclick="location.href='../Buscaminas/main 1.html'">BUSCA MINAS</button><br>
             <button class="boton" onclick="location.href='../SimonDice/simondice.html'">SIMON DICE</button><br>
             <button class="boton">HISTORIA</button><br>
