oh io hohoho oh hoh ojh

--- a/PiedraPapel/main.html
+++ b/PiedraPapel/main.html
@@ -56,10 +56,10 @@
             <h1 id="ia">0</h1>
             <p id="seleccionIA"></p>
         </div>
-
-        <script src="../js/main.js"></script>
-
     </div>
+    <script src="traducciones.js"></script>
+
 </body>
+
 
 </html>
