--- a/Buscaminas/main 1.html
+++ b/Buscaminas/main 1.html
@@ -166,7 +166,7 @@
 
     <div class="area">
         <div class="titulo">
-            <h1>BUSCAMINAS</h1>
+            <h1 id="titulo">BUSCAMINAS</h1>
         </div>
 
         <ul class="circles">
@@ -187,6 +187,8 @@
     <p id="vidas">vidas: 3</p>
     <button class="boton" id="reinicio" onclick="mostrarJuego()">Mostrar</button>
     <div id="juego"></div>
+
+    <script src="traducciones.js"></script>
 </body>
 
 </html>
