--- a/Buscaminas/main 1.html
+++ b/Buscaminas/main 1.html
@@ -121,6 +121,8 @@
             }
         }
 
+        var idioma = localStorage.getItem('idioma')
+
         function jugar(event, i, j) {
             var clic = event.target;
             switch (terreno[i][j]) {
@@ -145,7 +147,7 @@
                     break;
                 case "BUM":
                     vidas -= 1
-                    document.getElementById("vidas").innerHTML = "vidas: " + vidas;
+                    document.getElementById("vidas").innerHTML = 'main.json'[idioma].titulo + vidas;
                     clic.style.backgroundColor = "red";
                     if (vidas <= -1) {
                         alert("¡BUM! ¡Perdiste!");
@@ -184,6 +186,7 @@
 
     <img class="atras" src="../SourceComp/flechaAtras.png" onclick="location.href='../Principal/Principal.html'">
     
+
     <p id="vidas">vidas: 3</p>
     <button class="boton" id="reinicio" onclick="mostrarJuego()">Mostrar</button>
     <div id="juego"></div>
