Esto va tomando sentido

--- a/PiedraPapel/main.html
+++ b/PiedraPapel/main.html
@@ -30,7 +30,7 @@
 
         <img class="atras" src="../SourceComp/flechaAtras.png" onclick="location.href='../Principal/Principal.html'">
 
-        <h1 class="hola" id="tituloPiedraPapel">PIEDRA, PAPEL, TIJERA, LAGARTO Y SPOCK</h1>
+        <h1 class="hola" id="titulo">PIEDRA, PAPEL, TIJERA, LAGARTO Y SPOCK</h1>
 
         <P class="jugada" id="jugada">Selecciona tu jugada: </P>
         <div class="botonera">
@@ -48,17 +48,15 @@
         <h4 id="resultado" class="resultado">Selecciona una jugada y enviala.</h4>
 
         <div class="user">
-            <h6>TÚ</h6>
+            <h6 id="tu">TÚ</h6>
             <H1 id="user">0</H1>
         </div>
         <div class="ia">
-            <h6>IA</h6>
+            <h6 id="maquina">IA</h6>
             <h1 id="ia">0</h1>
             <p id="seleccionIA"></p>
         </div>
     </div>
-    <script src="traducciones.js"></script>
-
 </body>
 
 
