--- a/Principal/Principal.html
+++ b/Principal/Principal.html
@@ -31,9 +31,9 @@
         
         <div class="botonera">
             <button id="tituloPiedraPapel" class="boton" onclick="location.href='../PiedraPapel/main.html'">PIEDRA, PAPEL, TIJERA, LAGARTO, SPOCK</button><br>
-            <button class="boton" onclick="location.href='../Buscaminas/main 1.html'">BUSCA MINAS</button><br>
-            <button class="boton" onclick="location.href='../SimonDice/simondice.html'">SIMON DICE</button><br>
-            <button class="boton">HISTORIA</button><br>
+            <button id="tituloBuscaminas" class="boton" onclick="location.href='../Buscaminas/main 1.html'">BUSCA MINAS</button><br>
+            <button id="tituloSimonDice" class="boton" onclick="location.href='../SimonDice/simondice.html'">SIMON DICE</button><br>
+            <button id="tituloHistoria" class="boton">HISTORIA</button><br>
             <select id="selector_idioma">
                 <option id="selecEs" value="es">Español</option>
                 <option id="selecEn" value="en">Inglés</option>
