--- a/SimonDice/simondice.html
+++ b/SimonDice/simondice.html
@@ -104,15 +104,15 @@
 
         <img class="atras" src="../SourceComp/flechaAtras.png" onclick="location.href='../Principal/Principal.html'">
         <div class="titulo">
-            <h1>SIMON DICE</h1>
+            <h1 id="titulo">SIMON DICE</h1>
         </div>
         <button class="botonNormal" id="comienzo" onclick="juego()">EMPEZAR</button>
         <div class="loquesea">
             <div id="juego"></div>
         </div>
         <div>
-            <p class="puntuacion" id="puntos">Puntos: 0</p>
-            <p class="puntuacion" id="rondas">Ronda: 0</p>
+            <p class="puntuacion" id="puntos">puntos: </p>
+            <p class="puntuacion" id="rondas">rondas: </p>
         </div>
     </div>
 
