--- a/Principal/Principal.html
+++ b/Principal/Principal.html
@@ -28,15 +28,24 @@
             <li></li>
             <li></li>
         </ul>
-        
+
         <div class="botonera">
-            <button id="tituloPiedraPapel" class="boton" onclick="location.href='../PiedraPapel/main.html'">PIEDRA, PAPEL, TIJERA, LAGARTO, SPOCK</button><br>
-            <button id="tituloBuscaminas" class="boton" onclick="location.href='../Buscaminas/main 1.html'">BUSCA MINAS</button><br>
-            <button id="tituloSimonDice" class="boton" onclick="location.href='../SimonDice/simondice.html'">SIMON DICE</button><br>
+            <button id="tituloPiedraPapel" class="boton" onclick="location.href='../PiedraPapel/main.html'">PIEDRA,
+                PAPEL, TIJERA, LAGARTO, SPOCK</button><br>
+            <button id="tituloBuscaminas" class="boton" onclick="location.href='../Buscaminas/main 1.html'">BUSCA
+                MINAS</button><br>
+            <button id="tituloSimonDice" class="boton" onclick="location.href='../SimonDice/simondice.html'">SIMON
+                DICE</button><br>
             <button id="tituloHistoria" class="boton">HISTORIA</button><br>
             <select id="selector_idioma">
+
                 <option id="selecEs" value="es">Español</option>
                 <option id="selecEn" value="en">Inglés</option>
+                <option id="selecFr" value="fr">Francés</option>
+                <option id="selecDe" value="de">Alemán</option>
+                <option id="selecIt" value="it">Italiano</option>
+                <option id="selecIs" value="is">Islandés</option>
+
             </select>
 
             <script src="../js/main.js"></script>
