--- a/Principal/Principal.html
+++ b/Principal/Principal.html
@@ -36,7 +36,8 @@
                 MINAS</button><br>
             <button id="tituloSimonDice" class="boton" onclick="location.href='../SimonDice/simondice.html'">SIMON
                 DICE</button><br>
-            <button id="tituloHistoria" class="boton">HISTORIA</button><br>
+            <button id="tituloHistoria" class="boton" onclick="location.href='../Historia/main.html'">HISTORIA</button><br>
+            
             <select id="selector_idioma">
 
                 <option id="selecEs" value="es">Español</option>
