--- a/Historia/main.html
+++ b/Historia/main.html
@@ -37,10 +37,10 @@
         <img src="jovani4.png" class="jovani">
 
         <div class="botonIzquierda" onclick="retroceder()">
-            <button class="boton">Atrás</button>
+            <button class="boton">⬅️</button>
         </div>
         <div class="botonDerecha" onclick="avanzar()">
-            <button class="boton">Siguiente</button>
+            <button class="boton">➡️</button>
         </div>
 
     </div>
